[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/Damage_Flicker.gd" type="Script" id=1]
[ext_resource path="res://assets/player_damaged.wav" type="AudioStream" id=2]

[node name="Damage_Flicker" type="ColorRect"]
modulate = Color( 1, 0, 0, 0.262745 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -17.0
margin_right = -1007.0
margin_bottom = -585.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Appear_Timer" type="Timer" parent="."]

[node name="Dissappear_Timer" type="Timer" parent="."]

[node name="Flicker_Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 10.0

[connection signal="timeout" from="Appear_Timer" to="." method="_on_Appear_Timer_timeout"]
[connection signal="timeout" from="Dissappear_Timer" to="." method="_on_Dissappear_Timer_timeout"]
[connection signal="timeout" from="Flicker_Timer" to="." method="_on_Flicker_Timer_timeout"]
